--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <img id="steve" src="steve.png">
         <p>Привет, я Стив!</p>
     </div>
-    <div id="mainsection">
-        <p>Кто я?: Я - игрок Minecraft</p>
-        <p>Что я делаю?: Строю крутые здания в игре</p>
-        <p>Больше всего я люблю: Добывать алмазы</p>
+    <div class = 'container' id="mainsection">
+        <p class="item">Кто я?: Я - игрок Minecraft</p>
+        <p class="item2">Что я делаю?: Строю крутые здания в игре</p>
+        <p class="item">Больше всего я люблю: Добывать алмазы</p>
     </div>
 </body>
 </html>
